--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "@google/genai": "^1.31.0",
-    "react-dom": "^19.2.1",
-    "framer-motion": "^11.0.8",
-    "@supabase/supabase-js": "^2.87.1"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "@google/genai": "0.1.1",
+    "framer-motion": "11.0.8",
+    "@supabase/supabase-js": "2.39.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
