--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.31.0",
-    "@supabase/supabase-js": "^2.87.1",
-    "@vercel/analytics": "^1.6.1",
-    "framer-motion": "^11.0.8",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "@google/genai": "^1.31.0",
+    "react-dom": "^19.2.1",
+    "framer-motion": "^11.0.8",
+    "@supabase/supabase-js": "^2.87.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
